Bug 487019 - FFmpeg chapter export exports wrong TIMEBASE
Summary: FFmpeg chapter export exports wrong TIMEBASE
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: Rendering & Export (other bugs)
Version First Reported In: 24.02.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-14 14:23 UTC by tippfehlr
Modified: 2024-05-15 01:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tippfehlr 2024-05-14 14:23:57 UTC
SUMMARY
When exporting guides to FFmpeg chapters, the TIMEBASE option is swapped.
I get 25/1 instead of 1/25.
When applying this to a file with ffmpeg (`ffmpeg -i input.mp4 -i _chapters.txt -c copy -map_metadata 1 out.mp4`) the file gets super long.

STEPS TO REPRODUCE
1. create at least one guide/marker
2. right click on one marker -> export guides
3. select ffmpeg chapters

OBSERVED RESULT

;FFMETADATA1

[CHAPTER]
TIMEBASE=25/1
START=5
END=317
title=1

EXPECTED RESULT

;FFMETADATA1

[CHAPTER]
TIMEBASE=1/25
START=5
END=317
title=1

(see TIMEBASE)

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Comment 1 tippfehlr 2024-05-14 19:21:33 UTC
Git commit a08ab55b59ec735f7ded0607287a17de47bc667f by Jonathan Grotelüschen.
Committed on 14/05/2024 at 18:04.
Pushed by mardelle into branch 'master'.

Fix wrong FFmpeg chapter export TIMEBASE

M  +1    -1    src/dialogs/exportguidesdialog.cpp

https://invent.kde.org/multimedia/kdenlive/-/commit/a08ab55b59ec735f7ded0607287a17de47bc667f
Comment 2 Jean-Baptiste Mardelle 2024-05-15 01:44:39 UTC
Git commit df6c63018c091f0a332645012aae06c64829490b by Jean-Baptiste Mardelle, on behalf of Jonathan Grotelüschen.
Committed on 15/05/2024 at 01:44.
Pushed by mardelle into branch 'release/24.05'.

Fix wrong FFmpeg chapter export TIMEBASE

M  +1    -1    src/dialogs/exportguidesdialog.cpp

https://invent.kde.org/multimedia/kdenlive/-/commit/df6c63018c091f0a332645012aae06c64829490b