Fix wrong FFmpeg chapter export TIMEBASE

BUG: 487019